update OpenAPI generation again, fix TableService, add base entity
